From 81755b0 (master):
=====================

In scripts/make_redundant_visibilities.py,

(*) Fix bug in determining unique baselines

From 59b3e2e (master):
=====================

In scripts/run_prisim.py,

(*) Check for lowercase input for telescope_id

From 586d6ae (pyuvdata):
=======================

In prisim/interferometry.py,

(*) Write antenna positions relative to telescope location into
pyuvdata object for UVFITS output

From c2d88e1 (tmp):
==================

In scripts/run_prisim.py,

(*) Check for external beam to be peak normalized

From 0ba8ad6 (master), fa6fcb2 (closure-adv):
============================================

(*) Merge changes from master branch onto closure-adv

From 95d415d (closure-adv):
==========================

In prisim/interferometry.py,

(*) Add input keyword unique to member function
getThreePointCombinations() of class InterferometerArray to return
all or only unique 3-point combinations of baseline triads. Update
member function and class docstrings accordingly
(*) Add input keyword unique to member function getClosurePhase() 
of class InterferometerArray to return closure phases on all or only
unique 3-point combinations of baseline triads if input
antenna_triplets is set to None. Update member function docstring
accordingly

In prisim/bispectrum_phase.py,

(*) In function write_PRISim_bispectrum_phase_to_npz(), pass input
keyword unique in call to member function getClosurePhase() of
class InterferometerArray in accordance with changes above. 

From 6c5c1e3 (closure-adv):
==========================

In prisim/interferometry.py,

(*) Replace raising exception in member function
getThreePointCombinations() of class InterferometerArray with
warnings. Modify the data flow accordingly

From adf4ca3 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Add input keyword ndaybins in member function smooth_in_tbins()
of class ClosurePhase, which can be used to specify ndaybins as an