@@ -650,7 +650,8 @@ fgparm   :
     custom_reffreq  : 0.150
                                 # Catalog reference frequency (in GHz).
                                 # Applies only to custom catalog when
-                                # FG model is set to 'custom'
+                                # FG model is set to 'custom', or
+				# GLEAM to pick the nearest frequency
 
     flux_min        : 10.0
                                 # Flux density lower limit (Jy) to be 
@@ -742,7 +743,7 @@ catalog  :
                       # '/path/to/MWACScatalogFile.csv'
                                 # MWACS catalog file
 
-    GLEAM_file      : 'GLEAMIDR3.fits'
+    GLEAM_file      : 'GLEAM_EGC_v2.fits'
                       # '/path/to/GLEAMcatalogFile.fits'
                                 # GLEAM catalog file
 
